Archive2/47/7ca47f07fa3f31/output
+ g++-4.8 -std=c++11 -O2 -Wall -pedantic -pthread main.cpp
main.cpp:6:10: error: ‘struct FactoryImpl<void>::secret’ is private
   struct secret { };
          ^
main.cpp:45:49: error: within this context
   virtual void _not_allowed (FactoryImpl<void>::secret) { };
                                                 ^
